project/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: frontend
  labels:
    name: frontend
    app.kubernetes.io/name: employee-directory
    app.kubernetes.io/component: frontend
---
apiVersion: v1
kind: Namespace
metadata:
  name: backend
  labels:
    name: backend
    app.kubernetes.io/name: employee-directory
    app.kubernetes.io/component: backend
